--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.1"
