--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "vue": "^3.0.0",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.8",
+    "vue3-apexcharts": "^1.4.0",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
