--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^3.3.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "sass": "^1.35.1",
     "vue": "^3.0.0",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.8",
@@ -27,6 +28,10 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.2.0",
+    "style-loader": "^2.0.0",
+    "webpack-cli": "^4.7.2"
   }
 }
